src/test/deca/syntax/invalid/custom/invalid_include.deca
// Description:
//    tests de programme incorrect (le fichier du include n'existe pas)
//
// Resultats:
//    ligne 10 : Erreur, le fichier toto.decah n'existe pas
//
// Historique:
//    cree le 07/01/2022

#include "toto.decah"
{
        println("1 2 3 ");
}

